objects/Account_Plan__c.object
<CustomObject>
    <description>R5 - Account Plan</description>
    <fields>
        <fullName>ABB_Swot_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>ABB Swot Count</label>
        <summaryFilterItems>
            <field>Actions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>5. ABB SWOT</value>
        </summaryFilterItems>
        <summaryForeignKey>Actions__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AccountPlanOwnerLMD__c</fullName>
        <label>AccountPlanOwnerLMD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccountPlanPriorOwnerId__c</fullName>
        <label>AccountPlanPriorOwnerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Analysis_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Account Analysis Count</label>
        <summaryForeignKey>Actions__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Initiatives_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Account Initiatives Count</label>
        <summaryFilterItems>
            <field>Actions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>3. Account Business Initiatives</value>
        </summaryFilterItems>
        <summaryForeignKey>Actions__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Needs_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Account Needs Count</label>
        <summaryFilterItems>
            <field>Actions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>2. Account Needs</value>
        </summaryFilterItems>
        <summaryForeignKey>Actions__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Copied_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan Originated</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plans (Account Plan Copied From)</relationshipLabel>
        <relationshipName>Account_Plans_Copied_from</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Owner__c</fullName>
        <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Year_Date_Format__c</fullName>
        <formula>DATE(VALUE(TEXT(Account_Plan_Year__c)),01,01)</formula>
        <label>Account Plan Year (Date Format)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Year__c</fullName>
        <description>R5 - Account Plan Year</description>
        <inlineHelpText>Enter the Account Plan Year</inlineHelpText>
        <label>Account Plan Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SWOT_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Account SWOT Count</label>
        <summaryFilterItems>
            <field>Actions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>1. Account SWOT Analysis</value>
        </summaryFilterItems>
        <summaryForeignKey>Actions__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Segmentations_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Account Sales Segmentations Count</label>
        <summaryFilterItems>
            <field>Additional_Account_Segmentation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account Sales Segmentation</value>
        </summaryFilterItems>
        <summaryForeignKey>Additional_Account_Segmentation__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Spend_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Account Spend Count</label>
        <summaryForeignKey>Market_Expectation__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Team_Members_Count__c</fullName>
        <description>R6- Count is used for conditional Sections in Merge Template.</description>
        <label>Account Team Members Count</label>
        <summaryForeignKey>Account_Plan_Team__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship with Account object</description>
        <inlineHelpText>Customer Name</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>R5 - Approval Date</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>R5 - Approval Status</description>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Comments__c</fullName>
        <description>R5 - Approver Comments</description>
        <label>Approver Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <description>R5 - Approver Name</description>
        <label>Approver Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R5 - Business Unit field to concatenate all BU of Financial Target and Expectations.</description>
        <label>BU</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budgeted_Opportunities_Future_USD__c</fullName>
        <label>Budgeted Opportunities Future USD</label>
        <summarizedField>Budget_Opp__c.Opportunity_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Opp__c.Applicable_Year__c</field>
            <operation>equals</operation>
            <value>Account Plan Next year</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Opp__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Budgeted_Opportunities_USD__c</fullName>
        <label>Supporting Opportunities USD</label>
        <summarizedField>Budget_Opp__c.Opportunity_Value_USD__c</summarizedField>
        <summaryForeignKey>Budget_Opp__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>R5 - Comments</description>
        <inlineHelpText>Free Text to add notes</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Roles_Count__c</fullName>
        <description>r&amp;- Field is used for conditional Sections in Merge Template</description>
        <label>Contact Roles Count</label>
        <summaryForeignKey>Contact_Roles__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R5 - Country field copied from Account Primary Address Country.</description>
        <formula>TEXT(Account__r.Primary_Address_Country__c)</formula>
        <inlineHelpText>Customer Country</inlineHelpText>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIV_Formula__c</fullName>
        <formula>IF(ISBLANK(DIV__c),&apos;Unassigned Division&apos;,
IF(CONTAINS(DIV__c, &apos;;&apos;) ,&apos;Cross Division&apos;, DIV__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <description>R5 - Division field to concatenate all the DIV of Financial Target and Expectations.</description>
        <label>DIV</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R6</description>
        <label>Account Plan Transferred</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plans Cloned</relationshipLabel>
        <relationshipName>Duplicate_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expansion_Actions_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Expansion Actions Count</label>
        <summaryFilterItems>
            <field>Actions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>9. Expansion</value>
        </summaryFilterItems>
        <summaryForeignKey>Actions__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_User_Type__c</fullName>
        <globalPicklist>External_User_Type</globalPicklist>
        <label>External User Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Freeze_Account_Plan_Budgets_FUTURE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R6 - Freeze Future Support Opportunities associated to Account Plan</description>
        <inlineHelpText>&quot;Freeze Future Supporting Opportunities&quot; checkbox to activate freezing the Opportunities associated to the Master Account Plan. Once the check box is activated the Opportunities for next Year can&apos;t be removed/added to the &quot;Future Supporting Opportunities&quot;</inlineHelpText>
        <label>Freeze Future Supporting Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freeze_Account_Plan_Budgets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Freeze Account Plan Budgets</description>
        <inlineHelpText>&quot;Freeze Supporting Opportunities&quot; check box to activate freezing the Opportunities associated with the Master Account Plan. Once the check box is activated then selected Opportunities cannot be removed/added to the &quot;Supporting Opportunities&quot;</inlineHelpText>
        <label>Freeze Supporting Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Future_Support_Opportunities_USD__c</fullName>
        <description>R6 - Req 3328</description>
        <label>Future Supporting Opportunities USD</label>
        <summarizedField>Support_Opportunity_for_Next_Year__c.Opportunity_Value_USD__c</summarizedField>
        <summaryForeignKey>Support_Opportunity_for_Next_Year__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Heat_Maps_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Heat Maps Count</label>
        <summaryFilterItems>
            <field>Additional_Account_Segmentation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Heat Maps</value>
        </summaryFilterItems>
        <summaryForeignKey>Additional_Account_Segmentation__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Innovation_Actions_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Innovation Actions Count</label>
        <summaryFilterItems>
            <field>Actions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>8. Innovation</value>
        </summaryFilterItems>
        <summaryForeignKey>Actions__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Account_Plan_Available__c</fullName>
        <description>This field is for reporting purpose and created as part of RKD 3.0 release and used in report % of Accounts without Account Plans.</description>
        <formula>If(NOT(ISNULL(Name)),true,false)</formula>
        <label>Is Account Plan Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Sub_Account_Plan__c</fullName>
        <formula>RecordType.Name= &quot;Sub Account Plan&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Sub Account Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issues_and_Challenges_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Issues and Challenges Count</label>
        <summaryForeignKey>Issues_and_Challenges__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Key_Account_Type__c</fullName>
        <description>R5 - Key Account Type</description>
        <formula>TEXT(Account__r.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Account_Plan_Status__c</fullName>
        <formula>TEXT(Sub_Account_Plan_To__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Actions_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>NPS Actions Count</label>
        <summaryFilterItems>
            <field>Actions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>6. NPS</value>
        </summaryFilterItems>
        <summaryForeignKey>Actions__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Old_Record_Type_Value__c</fullName>
        <description>R5 - To capture Old Record Type Value.</description>
        <label>Old Record Type Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG__c</fullName>
        <label>PG</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Plan_Record_Type__c</fullName>
        <description>SFDC1778 – Record type of the parent record</description>
        <formula>Sub_Account_Plan_To__r.RecordType.Name</formula>
        <inlineHelpText>Parent Parent Account Plan Record Type to identify record relation</inlineHelpText>
        <label>Parent Account Plan Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Penetration_Actions_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Penetration Actions Count</label>
        <summaryFilterItems>
            <field>Actions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>7. Penetration</value>
        </summaryFilterItems>
        <summaryForeignKey>Actions__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Print_Document__c</fullName>
        <description>Button used to generate printouts leveraging X author</description>
        <formula>HYPERLINK(&quot;/apex/Apttus__DocumentGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Document&amp;templateType=Account Plan&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click GENERATE button to create a standard format file from the content. You can choose between several file formats and languages.</inlineHelpText>
        <label>Print Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Lines__c</fullName>
        <label>Product Lines</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Account_GUID__c</fullName>
        <formula>Account__r.Root_Account_GUID__c</formula>
        <label>Root Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Targets_BU_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Sales Targets BU Count</label>
        <summaryFilterItems>
            <field>Budget__c.Segment_Level__c</field>
            <operation>equals</operation>
            <value>Business Unit</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Targets_Divisions_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Sales Targets Divisions Count</label>
        <summaryFilterItems>
            <field>Budget__c.Segment_Level__c</field>
            <operation>equals</operation>
            <value>Division</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Targets_PG_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Sales Targets PG Count</label>
        <summaryFilterItems>
            <field>Budget__c.Segment_Level__c</field>
            <operation>equals</operation>
            <value>Product Group</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Targets_PL_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Sales Targets PL Count</label>
        <summaryFilterItems>
            <field>Budget__c.Segment_Level__c</field>
            <operation>equals</operation>
            <value>Product Line</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R5 - Status</description>
        <inlineHelpText>Planning = &quot;This Account Plan is under Preparation&quot;. Approved = &quot;This Account Plan has been approved by Manager, and is operational&quot;. Closed = &quot;This Account Plan has expired&quot;</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Account_Plan_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Sub Account Plan To (Lookup Field to Account Plan itself)</description>
        <inlineHelpText>Select the Parent: Master or Sub Account Plan if it exists</inlineHelpText>
        <label>Parent Account Plan</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 OR 2 OR 3 OR 4 OR 5 OR 6) AND 7) OR 8</booleanFilter>
            <filterItems>
                <field>Account_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Account Plan</value>
            </filterItems>
            <filterItems>
                <field>Account_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Account Plan-Freeze Budget</value>
            </filterItems>
            <filterItems>
                <field>Account_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Account Plan-Freeze Future Support Opportunities</value>
            </filterItems>
            <filterItems>
                <field>Account_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Account Plan-Freeze Budget and Future Opportunities</value>
            </filterItems>
            <filterItems>
                <field>Account_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Account Master Plan Closed Page</value>
            </filterItems>
            <filterItems>
                <field>Account_Plan__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sub Account Plan</value>
            </filterItems>
            <filterItems>
                <field>Account_Plan__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please use the filters to reduce the number of fields in the lookup window.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Supporting Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Opportunities_Next_Year_Count__c</fullName>
        <description>R6- Account Plan Merge Document</description>
        <label>Supporting Opportunities Next Year Count</label>
        <summaryForeignKey>Support_Opportunity_for_Next_Year__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Supporting_Opportunities_Count__c</fullName>
        <description>R6- Field is used for Conditional Segments in Merge Template.</description>
        <label>Supporting Opportunities Count</label>
        <summaryForeignKey>Budget_Opp__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_Account_Plan_Check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>R5 - Field used for Duplicate check of  Account Plan.</description>
        <label>Unique Account Plan Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Visit_Report_Count_Old__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Visit Report Count Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Report_Count__c</fullName>
        <label>Visit Report Count</label>
        <summaryForeignKey>VR_Related_Account_Plans__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Account_Plans__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Account Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Plan</label>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <recordTypes>
        <fullName>Account_Plan</fullName>
        <active>true</active>
        <description>Cross Divisional Account Plan created by the Account Team to grow the ABB Share of Wallet at this Particular Account. Only one Master Account Plan per budgeted year.</description>
        <label>Master Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Plan_Closed_Page</fullName>
        <active>true</active>
        <description>R5 - Record Type created for Account Master Plan Closed Page Layout</description>
        <label>Account Master Plan Closed Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Support_Plan</fullName>
        <active>true</active>
        <description>Division/BU/PG/PL detail Plans. It can support the Master Account Plan or be a standalone Plan.</description>
        <label>Sub Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Support_Plan_Closed</fullName>
        <active>true</active>
        <description>R5 - Record Type created for Account Support Plan Closed Page Layout</description>
        <label>Account Support Plan Closed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Freeze_Budget</fullName>
        <active>true</active>
        <description>R5 - Freeze Budget Record Type for Freeze Budget Layout.</description>
        <label>Master Account Plan-Freeze Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>Freeze_Budget_and_Future_Budget</fullName>
        <active>true</active>
        <description>R6 - Budget and Support Opportunity Future Freeze</description>
        <label>Master Account Plan-Freeze Budget and Future Opportunities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Freeze_Future_Budget</fullName>
        <active>true</active>
        <description>R6 -Master Account Plan-Freeze Budget Future</description>
        <label>Master Account Plan-Freeze Future Support Opportunities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Account_Plan_Freeze_Budget</fullName>
        <active>true</active>
        <label>Sub Account Plan-Freeze Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Account_Plan_Freeze_Budget_and_Future_Support_Opportunities</fullName>
        <active>true</active>
        <label>Sub Account Plan-Freeze Budget and Future Support Opportunities</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Account_Plan_Freeze_Future_Support_Opportunities</fullName>
        <active>true</active>
        <label>Sub Account Plan-Freeze Future Support Opportunities</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_Account_Plan_Year</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
ISPICKVAL(Status__c, &apos;Closed&apos;), ISCHANGED(Account_Plan_Year__c ))</errorConditionFormula>
        <errorMessage>You can not edit Account Plan Year when Account Plan is closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Account_Plans_On_Bulk_Accounts</fullName>
        <active>true</active>
        <description>Related Account cannot be Bulk Business.</description>
        <errorConditionFormula>AND(
    NOT($User.AccountMerge_Override__c),
    NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
    NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
    CONTAINS(LOWER(Account__r.Name), &apos;bulk business&apos;)
)</errorConditionFormula>
        <errorMessage>Related Account cannot be Bulk Business.</errorMessage>
    </validationRules>
</CustomObject>